--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <p>But, of course, 1977 wasn’t the only year that the U.S. suffered under snow — and, right now, the Northeast is bracing for what promises to be a major blizzard.</p>
     </section>
     <section class="right-side-bar">
-        <img class="tint" src="zach.jpg"/>
+        <img src="zach.jpg"/>
         <p>Batman</p>
         <span>
           <div>Twitter</div>
@@ -58,10 +58,10 @@
     <footer class="footer">
       <h1>MOST POPULAR POSTS</H1>
       <span class="footer">
-        <img class="tint" src="IMG_0910.jpg"/>
+        <img src="IMG_0910.jpg"/>
         <img src="IMG_0911.jpg"/>
-        <img class="tint" src="IMG_0913.jpg"/>
-        <img class="tint"src="IMG_0912.jpg"/>
+        <img src="IMG_0913.jpg"/>
+        <img src="IMG_0912.jpg"/>
       </span>
       <div class="footer">
         <p>Nav Item 1</p>
